--- a/css/index-header.css
+++ b/css/index-header.css
@@ -106,6 +106,9 @@ nav {
     margin-left: 30px;
   }
   
+  .green-black-btn:hover {
+      background-color: var(--main-color);
+  }
 @media(min-width: 500px) {
     .main-page h1 {
         padding-right: 200px;
