--- a/css/index-main.css
+++ b/css/index-main.css
@@ -234,3 +234,41 @@
     grid-gap: 20px;
 }
 }
+
+.shop h2 {
+    font-family: var(--main-font-family);
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--main-color);
+    padding: 0 30px 0 30px;
+}
+
+.shop p {
+    font-family: var(--main-font-family);
+    font-size: 18px;
+    font-weight: lighter;
+    color: var(--main-color);
+    padding: 0 30px 0 30px;
+}
+
+@media(min-width: 650px){
+    .shop h2 {
+        font-size: 38px;
+    }
+}
+
+.armchairs, .lamps, .tables {
+    font-family: var(--main-font-family);
+    font-size: 18px;
+    font-weight: lighter;
+    padding: 0 30px 0 30px;
+}
+
+.furniture-sections {
+    padding: 0 30px 0 30px;
+}
+
+.furniture-sections button {
+ background: transparent;
+ border-color: transparent;
+}
