--- a/css/index-main.css
+++ b/css/index-main.css
@@ -272,3 +272,55 @@
  background: transparent;
  border-color: transparent;
 }
+
+.shop-range {
+    display: grid;
+    /* grid-template-rows: 1fr 1fr 1fr 1fr; */
+    grid-gap: 25px;
+    padding: 20px;
+}
+
+.shop-range img {
+ width: 100%;
+ display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.shop-range h3 {
+    font-family:var(--main-font-family);
+    font-weight: 500;
+    font-size: 23px;
+    color: var(--main-color);
+    text-align: center;
+}
+
+.shop-range p {
+    font-family: var(--main-font-family);
+    color: var(--primary-color);
+    font-size: 21px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.nav-btn {
+    background-color: transparent;
+    border: solid;
+    border-radius: 5px;
+    border-color: var(--primary-color);
+    color: var(--btn-text-color);
+    font-family: var(--primary-font-family);
+    font-weight: bolder;
+    text-transform:uppercase;
+    background-color: var(--third-color);
+    cursor: pointer;
+    padding: 8px 12px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .nav-btn:hover {
+      background-color: var(--primary-color);
+      color: var(--third-color);
+  }
